<?xml version="1.0"?>
<package format="2">
  <name>magnetic</name>
  <version>0.0.0</version>
  <description>The dmcPublish package</description>

  <maintainer email="jiangzhengbit@foxmail.com">Jiang Zheng</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>dmc_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>  
  <exec_depend>dmc_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
